spell and css spacing is fixed

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
     <div class="main">
         <div class="heading">
             <img src="./vibinex-logo.png" class="heading_logo" />
-            <p class="heading_text"> Vibinex for Github</p>
+            <p class="heading_text">Vibinex</p>
         </div>
         <div class="second_box">
             <img src="./lightIcon.png" alt="" class="light-icon">
@@ -22,15 +22,13 @@
         <div class="mainContent">
             <p class="secondHeading">Signup now to unlock the following: </p>
             <ul class="unorderList">
-                <li><span class="list_item">Highlight important PR to reivew</span></li>
-                <li><span class="list_item">Highlight imprortant section of code</span></li>
+                <li><span class="list_item">Highlight important PRs to review</span></li>
+                <li><span class="list_item">Highlight important sections of code</span></li>
                 <li><span class="list_item">Get PR review coverage</span></li>
             </ul>
         </div>
         <div class="signUpButton">
             <a class="signInButton" href="https://www.vibinex.com" target="_blank">Sign in</a>
-            <p class="signup_option">Don't have and account? <span class="signUp">
-                    <a href="https://www.vibinex.com" target="_blank">Sign up</a></span></p>
         </div>
     </div>
 </body>
