changed the file structure to match the recommendations in the chrome extension guides

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,11 +12,11 @@
 <body>
     <div class="main">
         <div class="heading">
-            <img src="./vibinex-logo.png" class="heading_logo" />
+            <img src="../resources/vibinex-logo.png" class="heading_logo" />
             <p class="heading_text">Vibinex</p>
         </div>
         <div class="second_box">
-            <img src="./lightIcon.png" alt="" class="light-icon">
+            <img src="../resources/lightIcon.png" alt="" class="light-icon">
             <p>Vibinex is active, but key features are missing.</p>
         </div>
         <div class="mainContent">
