--- a/popup/popup.html
+++ b/popup/popup.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="popup_css.css">
     <title>Vibinex</title>
+    <script src="popup.js"></script>
 </head>
 
 <body>
@@ -17,17 +18,17 @@
         </div>
         <div class="second_box">
             <img src="../resources/lightIcon.png" alt="" class="light-icon">
-            <p>Vibinex is active, but key features are missing.</p>
+            <p id="highlightedText">Vibinex is active, but key features are missing.</p>
         </div>
         <div class="mainContent">
-            <p class="secondHeading">Signup now to unlock the following: </p>
+            <p class="secondHeading" id="advantagesHeading">Signup now to unlock the following: </p>
             <ul class="unorderList">
                 <li><span class="list_item">Highlight important PRs to review</span></li>
                 <li><span class="list_item">Highlight important sections of code</span></li>
                 <li><span class="list_item">Get PR review coverage</span></li>
             </ul>
         </div>
-        <div class="signUpButton">
+        <div id="signUpButton">
             <a class="signInButton" href="https://www.vibinex.com" target="_blank">Sign in</a>
         </div>
     </div>
