--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,9 +11,12 @@
 </head>
 
 <body>
-    <div class="main">
+    <div id="loading-div" class="container">
+        <div class="loader"></div>
+    </div>
+    <div class="container" id="login-div">
         <div class="heading">
-            <img src="../resources/vibinex-logo.png" class="heading_logo" />
+            <img src="../resources/vibinex-logo.png" class="heading_logo" alt="Vibinex logo" />
             <p class="heading_text">Vibinex</p>
         </div>
         <div class="second_box">
@@ -28,8 +31,49 @@
                 <li><span class="list_item">Get PR review coverage</span></li>
             </ul>
         </div>
-        <div id="signUpButton">
-            <a class="signInButton" href="https://www.vibinex.com" target="_blank">Sign in</a>
+        <form id="google-form" target="_blank" method="POST">
+            <input id="csrfToken-google" type="hidden" name="csrfToken" />
+            <button type="submit" class="button">
+                <img src="/resources/google.svg" alt="Google" />
+                <span>Log in with Google</span>
+            </button>
+        </form>
+        <form id="github-form" target="_blank" method="POST">
+            <input id="csrfToken-github" type="hidden" name="csrfToken" />
+            <button class="button" type="submit">
+                <img src="/resources/github.svg" alt="GitHub" />
+                <span>Log in with GitHub</span>
+            </button>
+        </form>
+        <form id="bitbucket-form" target="_blank" method="POST">
+            <input id="csrfToken-bitbucket" type="hidden" name="csrfToken" />
+            <button class="button" type="submit">
+                <img src="/resources/bitbucket.svg" alt="BitBucket" />
+                <span>Log in with BitBucket</span>
+            </button>
+        </form>
+    </div>
+    <div id="session-div" class="container">
+        <div class="heading">
+            <img src="../resources/vibinex-logo.png" class="heading_logo" alt="Vibinex logo" />
+            <p class="heading_text">Vibinex</p>
+            <form id="signout-form" method="POST">
+                <input id="csrfToken-signout" type="hidden" name="csrfToken" />
+                <button type="submit" class="button">
+                    <span>Logout</span>
+                </button>
+            </form>
+        </div>
+        <div class="second_box">
+            <img src="../resources/lightIcon.png" alt="" class="light-icon">
+            <p id="highlightedText">Vibinex is active!</p>
+        </div>
+        <div id="user_div">
+            <img id="session-image" alt="User Profile Pic" class="profile_picture" />
+            <h1 id="session-name" class="title"></h1>
+            <p class="subtitle">
+                You are logged in as <span id="session-email"></span>
+            </p>
         </div>
     </div>
 </body>
