Bug fixes and console log fixes

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,7 +14,7 @@
     <div id="loading-div" class="container">
         <div class="loader"></div>
     </div>
-    <div class="container" id="login-div">
+    <div id="login-div" class="container">
         <div class="heading">
             <img src="../resources/vibinex-logo.png" class="heading_logo" alt="Vibinex logo" />
             <p class="heading_text">Vibinex</p>
