Added a "Rate us" link in the footer of the popup

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -55,7 +55,11 @@
             </p>
         </div>
     </div>
-    <p id="version">Version number</p>
+    <footer>
+        <a id="rate_us_anchor" href="https://chrome.google.com/webstore/detail/vibinex/jafgelpkkkopeaefadkdjcmnicgpcncc"
+            target="_blank">Rate us!</a>
+        <p id="version">Version number</p>
+    </footer>
 </body>
 
 </html>
