--- a/popup/popup.html
+++ b/popup/popup.html
@@ -36,12 +36,7 @@
         <div class="heading">
             <img src="../resources/vibinex-logo.png" class="heading_logo" alt="Vibinex logo" />
             <p class="heading_text">Vibinex</p>
-            <form id="signout-form" method="POST" target="_blank">
-                <input class="csrfToken" type="hidden" name="csrfToken" />
-                <button type="submit" class="button">
-                    <span>Logout</span>
-                </button>
-            </form>
+            <a class="button" style="width: fit-content;" href="https://vibinex.com/u" target="_blank">Dashboard</a>
         </div>
         <div class="second_box">
             <img src="../resources/lightIcon.png" alt="" class="light-icon">
@@ -53,6 +48,18 @@
             <p class="subtitle">
                 You are logged in as <span id="session-email"></span>
             </p>
+            <form id="signout-form" method="POST" target="_blank">
+                <input class="csrfToken" type="hidden" name="csrfToken" />
+                <button type="submit" class="logout_button">
+                    <small>(Logout)</small>
+                </button>
+            </form>
+            <a href="https://www.producthunt.com/products/vibinex-code-review/reviews?utm_source=badge-product_review&utm_medium=badge&utm_souce=badge-vibinex&#0045;code&#0045;review"
+                target="_blank">
+                <img src="https://api.producthunt.com/widgets/embed-image/v1/product_review.svg?product_id=534479&theme=light"
+                    alt="Vibinex&#0032;Code&#0045;Review - A&#0032;distributed&#0032;process&#0032;for&#0032;reviewing&#0032;pull&#0032;requests&#0046; | Product Hunt"
+                    class="producthunt_review_button" width="250" height="54" />
+            </a>
         </div>
     </div>
     <footer>
