--- a/popup/popup.html
+++ b/popup/popup.html
@@ -54,6 +54,10 @@
                     <small>(Logout)</small>
                 </button>
             </form>
+            <div id="pr-input-div">
+                <input type="text" id="pr-url-input" placeholder="Enter URL">
+                <button id="pr-url-submit-button" class="button">Submit</button>
+            </div>
             <a href="https://www.producthunt.com/products/vibinex-code-review/reviews?utm_source=badge-product_review&utm_medium=badge&utm_souce=badge-vibinex&#0045;code&#0045;review"
                 target="_blank">
                 <img src="https://api.producthunt.com/widgets/embed-image/v1/product_review.svg?product_id=534479&theme=light"
