Changed placeholder text

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -55,7 +55,7 @@
                 </button>
             </form>
             <div id="pr-input-div">
-                <input type="text" id="pr-url-input" placeholder="Enter URL">
+                <input type="text" id="pr-url-input" placeholder="Ex: https://github.com/Alokit-Innovations/vibi-dpu/pull/1">
                 <button id="pr-url-submit-button" class="button">Submit</button>
             </div>
             <a href="https://www.producthunt.com/products/vibinex-code-review/reviews?utm_source=badge-product_review&utm_medium=badge&utm_souce=badge-vibinex&#0045;code&#0045;review"
