--- a/popup/popup.html
+++ b/popup/popup.html
@@ -56,7 +56,7 @@
             </form>
             <div id="pr-input-div">
                 <input type="text" id="pr-url-input" placeholder="Ex: https://github.com/Alokit-Innovations/vibi-dpu/pull/1">
-                <button id="pr-url-submit-button" class="button">Submit</button>
+                <button id="pr-url-submit-button" class="button">Trigger!</button>
             </div>
             <a href="https://www.producthunt.com/products/vibinex-code-review/reviews?utm_source=badge-product_review&utm_medium=badge&utm_souce=badge-vibinex&#0045;code&#0045;review"
                 target="_blank">
