--- a/popup/popup.html
+++ b/popup/popup.html
@@ -54,6 +54,16 @@
                     <small>(Logout)</small>
                 </button>
             </form>
+
+
+            <div class="dpu-status-container">
+                DPU Status:
+                <button id="refreshDpuHealth" class="dpu-status-indicator button">
+                    <span style="font-size: 1.25rem;">↻</span>
+                </button>
+                <span id="dpuHealthStatus" class="chip"></span>
+            </div>
+
             <a href="https://www.producthunt.com/products/vibinex-code-review/reviews?utm_source=badge-product_review&utm_medium=badge&utm_souce=badge-vibinex&#0045;code&#0045;review"
                 target="_blank">
                 <img src="https://api.producthunt.com/widgets/embed-image/v1/product_review.svg?product_id=534479&theme=light"
@@ -68,4 +78,5 @@
         <p id="version">Version number</p>
     </footer>
 </body>
+
 </html>
